@@ -9,8 +9,8 @@ last-modified = 201202022020
 [General]
 pause-on-focus-lost = false
 show-hidden-files = false
-auto-save-settings = false
-current-model = "Model-3"
+auto-save-settings = true
+current-model = "Model-2A"
 
 
 # Computer models definition
@@ -83,7 +83,7 @@ rom = mato-gm.rom
 border = 2
 size = double
 half-pass = b75
-color-profile = color
+color-profile = standard
 color-pallette = rgb
 attr00 = white
 attr01 = aqua
@@ -156,7 +156,7 @@ radix = hex
 monitoring = false
 flash = false
 auto-stop = next-head
-recent-file = ""
+recent-file = "tape/games.ptp"
 
 # Debugger settings
 # * radix (hex | dec)
